--- a/style.css
+++ b/style.css
@@ -375,7 +375,9 @@ margin-right: 0; /* Reset margin for smaller screens */
 .lookingg {
 margin-top: 1vh;
 }
-
+.other{
+  margin-top:1vh;
+}
 }
 
 
