--- a/style.css
+++ b/style.css
@@ -202,25 +202,28 @@ width: 15% !important;
 width: 90%;
 border: 0;
 height: 100%;
-text-align: center;
+font-size: 17px;
 }
 
 .quantity {
 width: 90%;
 border: 0;
 text-align: center;
+font-size: 15px;
 }
 
 .price {
 width: 90%;
 border: 0;
 text-align: center;
+font-size: 15px;
 }
 
 .total {
 width: 90%;
 border: 0;
 text-align: center;
+font-size: 15px;
 }
 
 /* table entries ended  */
